# amani-apirest

./: .dockerignore  .gitignore  404.html  CLAUDE.md  INTEGRATION_CHANGES.md  README.md  README_GCP.md  README_LOCAL.md  README_WORKFLOWS.md  cp.txt  datos_insertados.sql  deploy-docs.sh  docker-compose.monitoring.yml  docker-compose.yml  dockerfile  firebase.json  generate-pdf-report.sh  index.html  justfile  mkdocs.yml  packages.md  pom.xml  pyproject.toml  sitemap.xml  spotbugs-exclude.xml  storage.rules  sync_docs.sh
.antigravitycli/: 8d76f8bc-3249-4a79-bfec-cf8f62f6337a.json
api/: allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  openapi.json  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
changelog/: index.html
doc/: Caddyfile  caddy-config.md  caddy-docker.md  caddy-instalacion-directa.md  coverage-p0-visual.md  coverage-p1-visual.md  error-detectados.md  notificaciones.http  plan-pruebas-api-rest.md
docs/: .pages  FIREBASE-FIX-GUIDE.md  changelog.md  index.md
guides/: index.html
monitoring/: README.md
postman/: amani-api.postman_collection.json  amani-api.postman_collection.json.bak  index.html
reports/: FIREBASE_SECRET_ACCESS_REPORT.md  index.html
scripts/: generate-docs.sh  generate-openapi.sh  generate-p0-coverage-visual.sh  render-alertmanager-config.sh  setup-gcp-infrastructure.sh  verify-branches.sh
search/: search_index.json
testing/: index.html
(+2722 files in other folders)
